# config-service

./: agents.md  journal.md  start.sh
.clinerules/: CODING 2.md  MEMORY.md  coding.md
changes/: 000-template.md
client-lib/: package-lock.json  package.json  tsconfig.json
client-lib/src/: applications.ts  client.ts  configurations.ts  errors.ts  index.ts  types.ts
client-lib/tests/: applications.test.ts  client.test.ts  configurations.test.ts
config-service/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config-service/app/: __init__.py  config.py  config_test.py  database.py  database_smoke_test.py  database_test.py  main.py  main_test.py  migrations.py  migrations_test.py
config-service/app/models/: application.py  application_test.py  configuration.py  configuration_test.py
config-service/app/repositories/: application_repository.py  application_repository_test.py  configuration_repository.py  configuration_repository_test.py
config-service/app/routers/: applications.py  applications_test.py  configurations.py  configurations_test.py
config-service/migrations/: 0001_create_migrations_table.sql  0002_create_applications_table.sql  0003_create_configurations_table.sql
memory/: ABOUT 2.md  ENV_SCRIPTS.md  TECHNICAL 2.md  TESTING.md  WORKFLOW-STATES.md  architecture.md
prompts/: 2-web-api-specs.md  3-web-api-specs.md  4-admin-ui-prompt.md  5-admin-ui-plan.md  6-client-lib-plan.md
ui/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
ui/src/: main.ts
(+17 files in other folders)
